--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my-second-repo</title>
+    <title>My Second Repo</title>
 </head>
 <body>
-    
+    <h1>I aam can push naw </h1>
 </body>
 </html>
