--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I aam can push naw </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, provident!</p>
 </body>
 </html>
